--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,23 @@
 language: ruby
+dist: trusty
+sudo: required
 services:
   - postgresql
+addons:
+  chrome: stable
+before_install:
+  - wget http://chromedriver.storage.googleapis.com/2.32/chromedriver_linux64.zip
+  - unzip chromedriver_linux64.zip
+  - rm chromedriver_linux64.zip
+  - sudo mv -f chromedriver /usr/local/bin/
+  - sudo chmod +x /usr/local/bin/chromedriver
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+  - psql -c 'create database foggly_test;' -U postgres
 script:
   - bundle exec rubocop
   - bundle exec rails test
-before_script:
-  - psql -c 'create database foggly_test;' -U postgres
+  - bundle exec rails test:system
